@@ -1,8 +1,8 @@
-	$Id: README.GMT,v 1.18 2007-04-03 03:53:43 pwessel Exp $
+	$Id: README.GMT,v 1.19 2007-10-02 00:43:50 guru Exp $
 
 Dear potential GMT users-
 
-Version 4.2.0 of GMT has recently been released.
+Version 4.2.1 of GMT has recently been released.
 GMT can be installed under Unix or Windows.
 
 For new installers of GMT under a Unix-like OS:
