@@ -1,8 +1,13 @@
 <HTML>
-<!--  $Id: gmt_arrrghh.html,v 1.16 2007-03-29 01:09:32 pwessel Exp $  -->
+<!--  $Id: gmt_arrrghh.html,v 1.17 2007-10-02 00:43:50 guru Exp $  -->
 <TITLE>GMT Incompatibilities Notes</title>
 <BODY bgcolor="#ffffff">
 <CENTER><H2>GMT Incompatibilities Notes</CENTER></H2><P>
+<HR>
+<H3><CENTER>1-OCT-2007: GMT Version 4.2.1 Released</H3></CENTER>
+4.2.1 scripts are believed to be fully backward compatible with 4.2.0.  For a list of all the new
+capabilities and enhancements, see the <A HREF="gmt_releases.html">RELEASES</A>
+page.
 <HR>
 <H3><CENTER>1-APR-2007: GMT Version 4.2.0 Released</H3></CENTER>
 4.2.0 scripts are believed to be fully backward compatible with 4.1.4.  For a list of all the new
